# unpacking_tuples_examples

./: CMakeLists.txt  LICENSE  README.md  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
